fix: align messages in thread with the ThreadHead message

--- a/src/components/Thread/styling/ThreadHead.scss
+++ b/src/components/Thread/styling/ThreadHead.scss
@@ -2,7 +2,12 @@
   padding-block-start: var(--spacing-sm);
 
   .str-chat__message {
+    max-width: calc(
+      var(--str-chat__message-composer-max-width) +
+      var(--str-chat__message-composer-padding)
+    );
     padding-block: var(--spacing-xs);
+    margin-inline: auto;
   }
 
   .str-chat__thread-start {
